lib/komainu/tests/snapshots/code_grant__success-2.snap
---
source: lib/komainu/tests/code_grant.rs
expression: "SerdeResponse::from(deny)"
---
{
  "body": null,
  "headers": {
    "location": "http://client_1.example/?error=access_denied"
  },
  "status": 302
}
