lib/komainu/tests/snapshots/code_grant__success.snap
---
source: lib/komainu/tests/code_grant.rs
expression: "SerdeResponse::from(acceptor.into_response())"
---
{
  "body": null,
  "headers": {
    "location": "http://client_1.example/?code=dvbuheoychyjmloq"
  },
  "status": 302
}
